Updating links to HTTPS

--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@ morphing into a sandbox design experiment for my HTML/CSS
         <div class="wrapper">
 
             <div class="icons right">
-                <a href="http://github.com/mfukano">
+                <a href="https://github.com/mfukano">
                     <img src="assets/svg/github-logo.svg" alt="github-octocat" class="icon"/></a>
-                <a href="http://codepen.io/marotafuka">
+                <a href="https://codepen.io/marotafuka">
                     <img src="assets/svg/codepen.svg" alt="codepen-shape" class="icon" style="padding-right: 5px;"/></a>
             </div>
 
@@ -96,16 +96,16 @@ morphing into a sandbox design experiment for my HTML/CSS
                 <div class="project-dropdown">
                     <div class="project-title">
                         <a href="#" class="project-link">Wikipedia Viewer</a><a
-                            href="http://codepen.io/marotafuka/pen/jVKjJw/"><img src="assets/svg/play-button.svg"
+                            href="https://codepen.io/marotafuka/pen/jVKjJw/"><img src="assets/svg/play-button.svg"
                                                                                  alt="goto-page" class="go-icon"/></a>
                     </div>
                     <div class="project-container">
                         <p class="project-description">
                         <p data-height="550" data-theme-id="0" data-slug-hash="jVKjJw" data-default-tab="result"
                            data-user="marotafuka" data-embed-version="2" data-pen-title="Wikipedia Viewer"
-                           class="codepen">See the Pen <a href="http://codepen.io/marotafuka/pen/jVKjJw/">Wikipedia
-                            Viewer</a> by Mat Fukano (<a href="http://codepen.io/marotafuka">@marotafuka</a>) on <a
-                                href="http://codepen.io">CodePen</a>.</p>
+                           class="codepen">See the Pen <a href="https://codepen.io/marotafuka/pen/jVKjJw/">Wikipedia
+                            Viewer</a> by Mat Fukano (<a href="https://codepen.io/marotafuka">@marotafuka</a>) on <a
+                                href="https://codepen.io">CodePen</a>.</p>
                         <script async src="https://production-assets.codepen.io/assets/embed/ei.js"></script>
                         </p>
                         <p class="project-description">
@@ -164,7 +164,7 @@ morphing into a sandbox design experiment for my HTML/CSS
                 <div class="project-dropdown">
                     <div class="project-title">
                         <a class="project-link" href="#">Just the Tip</a><a
-                            href="http://github.com/mfukano/just-the-tip"><img src="assets/svg/play-button.svg"
+                            href="https://github.com/mfukano/just-the-tip"><img src="assets/svg/play-button.svg"
                                                                                alt="goto-page" class="go-icon"/></a>
                     </div>
                     <div class="project-container">
@@ -191,8 +191,8 @@ morphing into a sandbox design experiment for my HTML/CSS
 
             <!-- Icon Footer -->
             <div class="attribution">Credit for icons is due to
-                <a href="http://www.flaticon.com/authors/freepik">various</a>
-                <a href="http://www.flaticon.com/authors/simpleicon">sources</a>.
+                <a href="https://www.flaticon.com/authors/freepik">various</a>
+                <a href="https://www.flaticon.com/authors/simpleicon">sources</a>.
             </div>
 
         </div>
@@ -220,8 +220,8 @@ morphing into a sandbox design experiment for my HTML/CSS
 
             <!-- Icon Footer -->
             <div class="attribution">Credit for icons is due to
-                <a href="http://www.flaticon.com/authors/freepik">various</a>
-                <a href="http://www.flaticon.com/authors/simpleicon">sources</a>.
+                <a href="https://www.flaticon.com/authors/freepik">various</a>
+                <a href="https://www.flaticon.com/authors/simpleicon">sources</a>.
             </div>
 
         </div>
@@ -238,7 +238,7 @@ morphing into a sandbox design experiment for my HTML/CSS
         <div class="wrapper">
 
             <div class="icons right">
-                <a href="http://soundcloud.com/ambi-sonic">
+                <a href="https://soundcloud.com/ambi-sonic">
                     <img 
                         src="assets/svg/soundcloud-logo.svg" 
                         alt="soundcloud"
@@ -286,7 +286,7 @@ morphing into a sandbox design experiment for my HTML/CSS
                 </p>
                 <p>
                     I developed an interest in electronic music at university.
-                    <a href="http://www.ableton.com">Ableton</a> is probably the single most-used piece of software on
+                    <a href="https://www.ableton.com">Ableton</a> is probably the single most-used piece of software on
                     my computer.
                     I love the freedom to draft and create ideas, and allow people to enjoy my creations.
                 </p>
@@ -313,9 +313,9 @@ morphing into a sandbox design experiment for my HTML/CSS
 
             <!-- Icon Footer -->
             <div class="attribution">Credit for icons is due 
-                <a href="http://www.flaticon.com/authors/gregor-cresnar">to</a>
-                <a href="http://www.flaticon.com/authors/freepik">various</a>
-                <a href="http://www.flaticon.com/authors/simpleicon">sources</a>.
+                <a href="https://www.flaticon.com/authors/gregor-cresnar">to</a>
+                <a href="https://www.flaticon.com/authors/freepik">various</a>
+                <a href="https://www.flaticon.com/authors/simpleicon">sources</a>.
             </div>
         </div>
     </div> <!-- close hobby box -->
@@ -330,7 +330,7 @@ morphing into a sandbox design experiment for my HTML/CSS
 
         <div class="wrapper">
             <div class="icons left">
-                <a href="http://linkedin.com/in/marotafuka">
+                <a href="https://linkedin.com/in/marotafuka">
                     <img src="assets/svg/linkedin-logo.svg" alt="linkedin-in" class="icon"/></a>
                 <a href="https://angel.co/mat-fukano">
                     <img src="assets/svg/victory-sign.svg" alt="angellist-peace" class="icon"/></a>
@@ -368,9 +368,9 @@ morphing into a sandbox design experiment for my HTML/CSS
 
             <!-- Icon Footer -->
             <div class="attribution">Credit for icons is due <a
-                    href="http://www.flaticon.com/authors/gregor-cresnar">to</a>
-                <a href="http://www.flaticon.com/authors/freepik">various</a>
-                <a href="http://www.flaticon.com/authors/simpleicon">sources</a>.
+                    href="https://www.flaticon.com/authors/gregor-cresnar">to</a>
+                <a href="https://www.flaticon.com/authors/freepik">various</a>
+                <a href="https://www.flaticon.com/authors/simpleicon">sources</a>.
             </div>
 
         </div>
