Update personal profile

--- a/index.html
+++ b/index.html
@@ -268,8 +268,9 @@ morphing into a sandbox design experiment for my HTML/CSS
                 <p>
                     I love to learn, especially when it comes to new technology. Currently I'm focused on:
                     <ul style="margin-top: 10px;">
-                        <li>Full-stack testing best practices</li>
-                        <li>Re-learning Ruby on Rails</li>
+                        <li>React Native</li>
+                        <li>Back-end fundamentals with Node.js vs Bun</li>
+                        <li>Deploying postgres on Docker</li>
                     </ul>
                 </p>
 
@@ -293,12 +294,14 @@ morphing into a sandbox design experiment for my HTML/CSS
                 
                 <h3>Cooking</h3>
                 <p>
-                    Part of my enjoyment of making things manifests itself as cooking — I'm a bit of a neurotic perfectionist in this regard. I <em>may</em> make the best french fries I've ever had, and I've had a <b>lot</b> of french fries.
+                    Part of my enjoyment of making things manifests itself as cooking! I'm a harsh critic with myself 
+                    but I know I make the best french fries I've ever had, and I've had a <b>lot</b> of french fries.
                 </p>
                 
                 <h3>Climbing</h3>
                 <p>
-                    Problem-solving often manifests as rock-climbing for me! It's an awesome way to use your brain and your body to tackle complex problems. Currently I'm working to send every 5.12a on toprope and V5 on boulder.
+                    I love climbing! Especially <b>bouldering</b>. It's an awesome way to use your brain and your body to tackle complex problems.
+                    Currently I'm working to send every 5.12a on toprope and V5 on boulder. I'm also making an app to help track my bouldering journey!
                 </p>
 
                 <h3>Kuro</h3>
