Update personal profile

--- a/index.html
+++ b/index.html
@@ -258,8 +258,9 @@ morphing into a sandbox design experiment for my HTML/CSS
                 </div>
                 <h3>Hi there</h3>
                 <p>
-                    Since you're on this page at all, and also actively decided to read about the page author, thanks for taking the time to read about me!
+                    Since you're on this page at all, and also actively decided to read about the page author, hello!
                 </p>
+                <br>
                 <p>
                     My name is Mat and I like to make things and solve problems. Here are a few things in life that are important to me:
                 </p>
@@ -285,6 +286,7 @@ morphing into a sandbox design experiment for my HTML/CSS
                 <p>
                     My second love in life is music. I played a variety of instruments in the past and was previously deeply passionate about group music-making.
                 </p>
+                <br>
                 <p>
                     I developed an interest in electronic music at university.
                     <a href="https://www.ableton.com">Ableton</a> is probably the single most-used piece of software on
@@ -304,10 +306,6 @@ morphing into a sandbox design experiment for my HTML/CSS
                     Currently I'm working to send every 5.12a on toprope and V5 on boulder. I'm also making an app to help track my bouldering journey!
                 </p>
 
-                <h3>Kuro</h3>
-                <p>
-                    You'll often find me spending quality time with my weird mutt, Kurogoma.
-                </p>
                 <br>
                 <div class="image-container bottom">
                     <img src="assets/images/mat+kuro.jpg" alt="man-with-dog" class="profile-image">
